# fp2022

CSharpExc/: CSharpExc.opam  README.md  dune-project
CSharpExc/demos/: dune  interpretRun.ml  interpretTests.t
CSharpExc/lib/: ast.ml  dune  interpreter.ml  parser.ml  types_setup.ml
Cypher/: .ocamlformat  Cypher.opam  README.md  dune-project
Cypher/demos/: dune  tests.ml  tests.t
Cypher/lib/: ast.ml  dune  interpret.ml  parser.ml
FSharpActivePatterns/: .ocamlformat  FSharpActivePatterns.opam  README.md  dune-project
FSharpActivePatterns/demos/: demo.ml  demo.t  dune
FSharpActivePatterns/lib/: ast.ml  dune  interpret.ml  parser.ml
SMLEqTypesValRestr/: README.md  SMLEqTypesValRestr.opam  dune-project
SMLEqTypesValRestr/demos/: demoInfer.ml  demoInfer.t  demoInterpret.ml  demoInterpret.t  dune
SMLEqTypesValRestr/lib/: ast.ml  dune  inferencer.ml  inferencer.mli  interpreter.ml  parser.ml  parser.mli  result.ml  typing.ml
SchemeCallCC/: .ocamlformat  README.md  SchemeCallCC.opam  dune-project  my_scheme_call.opam
SchemeCallCC/demos/: demoInterpret.ml  demoInterpret.t  demoInterpreter.ml  demoParse.ml  dune
SchemeCallCC/lib/: ast.ml  dune  interpreter.ml  parser.ml
